# ggit

./: .Rbuildignore  .Rhistory  .gitignore  CLAUDE.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  pyproject.toml
.github/workflows/: python-publish.yml
R/: config.R  contributions.R  fetch_all.R  list_git_repo.R  shiny.R  tbl_git.R  utilities.R
ggit/: app.css  cli.py  repo_info.py  scanner.py
ggit/.claude/: settings.local.json
inst/ggit/: global.R  server.R  ui.R
inst/ggit/www/: custom.css
man/: configs.Rd  contributions.Rd  fetch_all.Rd  list_git.Rd  run_app.Rd  tbl_git.Rd
tests/: test_cli.py  test_repo_info.py  test_scanner.py
