[project]
name = "ggit"
version = "0.5.0"
description = "CLI to scan directories for git repositories and get a quick overview of their status"
authors = [{ name = "Denis Roussel", email = "deroussel@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual",
    "GitPython",
    "rich",
]

[project.scripts]
ggit = "ggit.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "textual-dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
